[package]
name = "bolter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }
rig-core = { version = "0.22.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
wasmtime = "37.0.2"
