[package]
name = "bolter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_all_modules"
path = "src/bin/test_all_modules.rs"

[[bin]]
name = "webserver"
path = "src/bin/webserver.rs"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
keyring = { version = "3.6", features = ["linux-native-sync-persistent", "sync-secret-service"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
rig-core = { version = "0.24.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
wasmtime = "37.0.2"
