[package]
name = "filigree"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.22.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
wasmtime = "37.0.2"
wasmtime-wasi = "37.0.2"
