[package]
name = "test-member"
version = "0.1.0"
edition = "2024"

[build]
target = "wasm32-wasip1"

[[bin]]
name = "test-member1"
path = "src/bin/test-member1.rs"

[[bin]]
name = "test-member2"
path = "src/bin/test-member2.rs"

[dependencies]
macros = { version = "0.1.0", path = "../macros" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.0.4"
